syntax = "proto3";

message Signature {
    message ECDSACompact {
        bytes bytes = 1; // compact representation [ R || S ], 64 bytes
        uint32 recovery = 2; // recovery bit
    }
    oneof union {
        ECDSACompact ecdsaCompact = 1;
    }
}

message PublicKey {
    message Secp256k1Uncompresed {
        bytes bytes = 1; // uncompressed point with prefix (0x04) [ P || X || Y ], 65 bytes
    }
    oneof union {
        Secp256k1Uncompresed secp256k1Uncompressed = 1;
    }
    optional Signature signature = 2;
}

message PrivateKey {
    message Secp256k1 {
        bytes bytes = 1; // D big-endian, 32 bytes
    }
    oneof union {
        Secp256k1 secp256k1 = 1;
    }
}

message Payload {
    message AES256GCM_HKDFSHA256 {
        bytes hkdfSalt = 1;
        bytes gcmNonce = 2;
        bytes payload = 3;
    }
    oneof union {
        AES256GCM_HKDFSHA256 aes256GcmHkdfSha256 = 1;
    }
}

message Message {
    message KeyBundle {
        PublicKey identityKey = 1;
        PublicKey preKey = 2;
    }
    message Header {
        KeyBundle sender = 1;
        KeyBundle recipient = 2;
    }

    Header header = 1;
    Payload payload = 2;
}

// Private Key Storage

message PrivateKeyBundle {
    PrivateKey identityKey = 1;
    repeated PrivateKey preKeys = 2;
}

message EncryptedPrivateKeyBundle {
    bytes walletPreKey = 1;
    Payload payload = 2;
}
